bpo-43121: Fix incorrect SyntaxError message for missing comma